документация частично описана
